[package]
name = "sudoku"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
plotly = "0.12.1"
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10.0"
serde = "1.0.218"
time_it_macro = {git = "https://github.com/LePhilippeDucTai/time_it_macro.git"}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
